--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div class="w-screen h-screen flex items-center justify-center">
+<div class="w-screen min-h-screen flex flex-col items-center justify-start p-8">
   <app-user />
 </div>
