--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,5 +1,5 @@
 <div
-  class="w-full max-w-2xl min-h-[600px] mx-auto p-8 border rounded-2xl bg-white shadow-xl text-center"
+  class="w-full max-w-3xl min-w-2xl min-h-[600px] mx-auto p-8 border rounded-2xl bg-white shadow-xl text-center"
 >
   <p class="text-2xl font-bold text-purple-600 mb-4">GitHub Profile</p>
 
