--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -66,6 +66,7 @@
       [(ngModel)]="userName"
       placeholder="Enter username"
       class="border border-gray-300 rounded-lg px-4 py-2 w-1/2 focus:outline-none focus:ring-2 focus:ring-purple-400"
+      (keyup.enter)="onClick()"
     />
     <button
       (click)="onClick()"
