--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -17,7 +17,7 @@
 
   <!-- Dados extras -->
   <div
-    class="flex flex-wrap justify-center items-center gap-3 text-gray-700 mb-4"
+    class="flex flex-wrap justify-center items-center gap-3 text-gray-700"
   >
     <div class="flex items-center gap-2">
       <img src="followers.svg" class="w-5 h-5" />
