--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,5 +1,5 @@
 <div
-  class="w-full max-w-3xl mx-auto my-8 p-3 sm:p-8 border rounded-2xl bg-white shadow-xl text-center flex flex-col"
+  class="w-full max-w-3xl mx-auto my-8 p-3 sm:p-8 border rounded-2xl bg-white shadow-xl text-center flex flex-col h-auto md:max-h-[90vh] overflow-auto"
 >
   <p class="text-2xl font-bold text-purple-600 mb-4">GitHub Profile</p>
 
@@ -16,9 +16,7 @@
   <p class="text-sm text-gray-600 italic mb-4">{{ user()?.bio }}</p>
 
   <!-- Dados extras -->
-  <div
-    class="flex flex-wrap justify-center items-center gap-3 text-gray-700"
-  >
+  <div class="flex flex-wrap justify-center items-center gap-3 text-gray-700">
     <div class="flex items-center gap-2">
       <img src="followers.svg" class="w-5 h-5" />
       <span class="text-sm">{{ user()?.followers }} Followers</span>
@@ -59,7 +57,20 @@
 
   <app-search (inputEvent)="onEvent($event)" />
 
-  <div class="mt-4">
-    <app-repositories [repos]="repos()" />
+  <!-- Botão toggle -->
+  <div class="mt-6">
+    <button
+      (click)="toggleRepos()"
+      class="text-sm text-purple-600 hover:underline cursor-pointer focus:outline-none"
+    >
+      {{ showRepos() ? "Hide" : "Show" }} Repositories
+    </button>
   </div>
+
+  <!-- Repositórios ocupando espaço restante só quando visível -->
+  @if (showRepos() && repos()?.length) {
+    <div class="flex-1 min-h-0 overflow-auto mt-4">
+      <app-repositories [repos]="repos()" />
+    </div>
+  }
 </div>
