--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,5 +1,5 @@
 <div
-  class="w-full max-w-3xl mx-auto my-8 p-3 sm:p-8 border rounded-2xl bg-white shadow-xl text-center flex flex-col h-auto md:max-h-[90vh] overflow-auto"
+  class="w-full max-w-3xl mx-auto my-8 p-3 sm:p-8 border rounded-2xl bg-white shadow-xl text-center flex flex-col max-h-screen md:max-h-[90vh] overflow-hidden"
 >
   <p class="text-2xl font-bold text-purple-600 mb-4">GitHub Profile</p>
 
