--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<div class="w-screen h-screen flex flex-col items-center justify-start p-8 md:overflow-hidden">
-  <app-user />
+<div
+	class="w-screen h-screen flex flex-col items-center justify-start p-8 md:overflow-hidden"
+>
+	<app-user />
 </div>
