feat: add route

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div
 	class="w-screen h-screen flex flex-col items-center justify-start p-8 md:overflow-hidden"
 >
-	<app-user />
+	<router-outlet></router-outlet>
 </div>
