--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,7 +1,7 @@
 <div class="mt-6 flex flex-col sm:flex-row justify-center items-center gap-3">
 	<input
 		type="text"
-		[(ngModel)]="userName"
+		[(ngModel)]="userNameModel"
 		placeholder="Enter username"
 		class="border border-gray-300 rounded-lg px-4 py-2 w-full sm:w-64 focus:outline-none focus:ring-2 focus:ring-purple-400"
 		(keyup.enter)="onEvent()"
