--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -13,19 +13,19 @@
 	<app-extra-data [user]="user()" />
 
 	<!-- Input and search button -->
-	<app-search (inputEvent)="onEvent($event)" />
+	<app-search [userName]="userName()" (inputEvent)="onEvent($event)" />
 
 	<!-- Repositories toggle button -->
 	@if (!userService.readError()) {
-		<div class="mt-6">
-			<button
+	<div class="mt-6">
+		<button
 			(click)="toggleRepos()"
 			class="text-sm text-purple-600 hover:underline cursor-pointer focus:outline-none"
-			>
+		>
 			{{ showRepos() ? "Hide" : "Show" }} Repositories
 		</button>
 	</div>
-}
+	}
 
 	<!-- Repositories if showRepo is true and repo array is > 0 -->
 	@if (showRepos() && repos()?.length) {
