--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -8,7 +8,7 @@
 	/>
 	<button
 		(click)="onEvent()"
-		class="px-6 py-2 rounded-lg bg-purple-500 text-white hover:bg-purple-600 transition-colors w-full sm:w-auto"
+		class="px-6 py-2 rounded-lg bg-purple-500 text-white hover:bg-purple-600 transition-colors cursor-pointer w-full sm:w-auto"
 	>
 		Search
 	</button>
