--- a/src/app/extra-data/extra-data.component.html
+++ b/src/app/extra-data/extra-data.component.html
@@ -1,7 +1,9 @@
 <div class="flex flex-wrap justify-center items-center gap-3 text-gray-700">
 	<div class="flex items-center gap-2">
 		<img src="followers.svg" class="w-5 h-5" />
-		<span class="text-sm">{{ user()?.followers }} Followers</span>
+		<span data-testid="spanFollowers-extra-data" class="text-sm"
+			>{{ user()?.followers }} Followers</span
+		>
 		·
 		<span class="text-sm">{{ user()?.following }} Following</span>
 	</div>
