feat: add more test cases for extra-data

--- a/src/app/extra-data/extra-data.component.html
+++ b/src/app/extra-data/extra-data.component.html
@@ -5,7 +5,9 @@
 			>{{ user()?.followers }} Followers</span
 		>
 		·
-		<span class="text-sm">{{ user()?.following }} Following</span>
+		<span data-testid="spanFollowing-extra-data" class="text-sm"
+			>{{ user()?.following }} Following</span
+		>
 	</div>
 </div>
 
