--- a/src/app/extra-data/extra-data.component.html
+++ b/src/app/extra-data/extra-data.component.html
@@ -18,6 +18,7 @@
 		[href]="'https://github.com/' + user()?.company?.replace('@', '')"
 		class="text-sm hover:text-purple-600 hover:underline"
 		target="_blank"
+		data-testid="anchorCompany-extra-data"
 	>
 		{{ user()?.company }}
 	</a>
