--- a/src/app/extra-data/extra-data.component.html
+++ b/src/app/extra-data/extra-data.component.html
@@ -37,7 +37,7 @@
 
 <div class="flex justify-center items-center gap-2 mt-3 text-gray-700">
 	<img src="date.svg" class="w-5 h-5" />
-	<span class="text-sm">
+	<span data-testid="spanCreatedAt-extra-data" class="text-sm">
 		Member since: {{ user()?.created_at | date : "mediumDate" }}
 	</span>
 </div>
